Fix margin top of navbar-flex on Firefox

--- a/less/bootstrap-theme/navbar.less
+++ b/less/bootstrap-theme/navbar.less
@@ -140,6 +140,7 @@
 .navbar-flex {
     width: 100%;
     height: @navbar-height;
+    vertical-align: top;
     .flexbox();
 
     > * {
